Added some more concepts

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
         console.log("Weight : "+weight);
         console.log("Student : "+student);
 
+        typeof(fullname);
+        typeof(email);
+        typeof(age);
+        typeof(weight);
+        typeof(student);
+
+        console.log("Datatype of fullname : "+typeof(fullname));
+        console.log("Datatype of Email  : "+typeof(email));
+        console.log("Datatype  of Age : "+typeof(age));
+        console.log("Datatype of Weight : "+typeof(weight));
+        console.log("Datatype of Student : "+typeof(student));
+
     </script>
 </body>
 </html>
